...
    title: 'New Message',
    subtitle: 'Select a contact to chat with',
    actionTitle: 'New Message',
    actionDescription: 'Create a private chat with one other person',
  },
  group: {
    title: 'New group',
    subtitle: 'Select contacts to invite',
    actionTitle: 'New group',
    actionDescription: 'Create a customizable group chat',
  },
  agent: {
    title: 'New Workspace',
    subtitle: '',
...
        {chatType === 'group' && (
          <Button
            preset="primary"
            marginTop="$l"
            onPress={onCreateGroup}
            loading={isCreating}
            label={isCreating ? '' : 'Create group'}
            centered
          />
        )}
      </YStack>
    </YStack>
  );
...
