...
  title: "~firtul-navsun's Group with a very long name",
  iconImage: null,
};
const channel = {
  ...tlonLocalGettingStarted,
  type: 'chat' as const,
  title: 'Chat',
  group: undefined,
  groupId: longGroup.id,
};
const singleChannelGroup = { ...longGroup, channels: [channel] };

function HeaderScreen() {
...
        handleGoToUserProfile={() => {}}
        onPressRetry={async () => {}}
        onPressDelete={() => {}}
        negotiationMatch
        onGroupAction={() => {}}
        goToDm={() => {}}
        goBack={() => setPressed('Back')}
      />
    );
  }

  return (
    <View flex={1} backgroundColor="$background">
...
