...
  const isWindowNarrow = useIsWindowNarrow();

  return (
    <View flex={1} backgroundColor="$secondaryBackground">
      <ScreenHeader
        backAction={handleGoBack}
        title={'Group Roles'}
        backgroundColor="$secondaryBackground"
        useHorizontalTitleLayout={!isWindowNarrow}
        rightControls={
          <ScreenHeader.TextButton
            color={'$positiveActionText'}
            onPress={handleAddRole}
          >
            New
          </ScreenHeader.TextButton>
        }
      />
      <ScrollView
        flex={1}
        contentContainerStyle={{
...
