...
          endValue: capitalize(group.privacy ?? ''),
          testID: 'GroupPrivacy',
          disabled: !actionsEnabled,
          onPress: handlePressGroupPrivacy,
        },
        {
          title: 'Roles',
          endValue: `${(groupRoles?.length ?? 0) + 1}`,
          testID: 'GroupRoles',
          disabled: !actionsEnabled,
          onPress: handlePressRoles,
        },
        {
...
        const confirmed = window.confirm(`Leave ${chatTitle}?\n\n${message}`);
        if (confirmed) {
          await leaveGroup();
        }
      } else {
        Alert.alert(`Leave ${chatTitle}?`, message, [
          { text: 'Cancel', style: 'cancel' },
          {
            text: 'Leave Workspace',
            style: 'destructive',
            onPress: leaveGroup,
          },
        ]);
...
